# Physical-ai-challenge--2026

./: .gitignore  Dockerfile  README.md  docker-compose.windows.yml  docker-compose.yml  visgit  visgit.pub
ur5_ws/src/hello_moveit/: package.xml
ur5_ws/src/hello_moveit/src/: hello_moveit.cpp
ur5_ws/src/ur5_controller/: CMakeLists.txt  package.xml
ur5_ws/src/ur5_controller/launch/: controller.launch.py
ur5_ws/src/ur5_description/: CMakeLists.txt  package.xml
ur5_ws/src/ur5_description/config/: ros2_gz_bridge.yaml  view_config.rviz
ur5_ws/src/ur5_description/launch/: gazebo.launch.py  rviz.launch.py
ur5_ws/src/ur5_description/urdf/: initial_positions.yaml  ur5_robot.gazebo.xacro  ur5_robot.urdf.xacro
ur5_ws/src/ur5_description/worlds/: gazebo_world.sdf
ur5_ws/src/ur5_moveit/: package.xml  setup.cfg  setup.py
ur5_ws/src/ur5_moveit/config/: initial_positions.yaml  kinematics.yaml  ros2_controllers.yaml
ur5_ws/src/ur5_moveit/launch/: moveit.launch.py  simulated_robot.launch.py
ur5_ws/src/ur5_moveit/ur5_moveit/: add_scene_objects.py  insert_obstacle.py
ur5_ws/src/ur5_moveit/worlds/: gazebo_world.sdf  pick_place_world.sdf
ur5_ws/src/ur5_moveit_config/: .setup_assistant  package.xml
ur5_ws/src/ur5_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  octomap.yaml  sensors_3d.yaml  ur5_robot.ros2_control.xacro  ur5_robot.srdf  ur5_robot.urdf.xacro
ur5_ws/src/ur5_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py  (+1 more)
(+1 files in other folders)
